# etch-hole-gen

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
.github/workflows/: release.yml
src/: context.md  cvt.rs  dxf_output.rs  gds_output.rs  hcp_grid.rs  main.rs  oasis_output.rs  particle_sim.rs  svg_input.rs  svg_output.rs
test_data/: square.dxf  test_frame.dxf
